# desire-paths

./: .gitignore  CLAUDE.md  README.md  app.py  ideas.md  pyproject.toml
paths/: agent.py  building.py  cost_function.py  distributions.py  grid_world.py  pathfinder.py  pathfinder_astar.py  pathfinder_flowfield.py  perlin.py  ui.py  visualise.py  world_manager.py
